Finished Interest Statement (I think?)

--- a/Interest Statement/Interest Statement.tex
+++ b/Interest Statement/Interest Statement.tex
@@ -12,5 +12,7 @@
 \begin{document}
 	\maketitle
 
-	The problem that we are interested in is that of understanding, analyzing, and reproducing the Differentiable Boundary Tree model for classification proposed in a recent paper.\footnote{\ Zoran et.\,al. 2017 (https://arxiv.org/abs/1702.08833)} This model kmj
+	The problem that we are interested in is that of understanding, analyzing, and reproducing the Differentiable Boundary Tree (DBT's) model for classification proposed in a recent paper.\footnote{\ Zoran et.\,al. 2017 (https://arxiv.org/abs/1702.08833)} This model is based heavily on work done by our own Professor Derbinsky, which in an online fashion, builds a tree that differentiates between class boundaries based on trained examples. \footnote{\ Mathy, Derbinsky et.\,al. 2015 (https://arxiv.org/pdf/1505.02867.pdf))} DBT's minimizes the number of nodes the tree contains by learning a non-linear transformation such that the distances between examples of different classes are maximized. \\
+	
+	Ideally, the goal for our team is to work together on this from start to finish, with each person learning as much as possible. Team members will individually take on small subsets of the testing, data collection, and report writing. 
 \end{document}
